--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ Jinja2==3.0.1
 MarkupSafe==2.0.1
 psycopg2-binary==2.9.1
 pycparser==2.20
+python-dotenv==0.19.0
 requests==2.26.0
 six==1.16.0
 SQLAlchemy==1.4.22
